init the project, add structure